<resources>
    <string name="app_name">FreshTech</string>
    <string name="login_correo">Correo electrónico</string>
    <string name="login_contraseña">Contraseña</string>
    <string name="register_contraseña">Contraseña maestra</string>
    <string name="register_confirmar_contraseña">Confirmar contraseña maestra</string>
    <string name="button_iniciar_sesion">INICIAR SESIÓN</string>
    <string name="button_registrarse">REGISTRARSE</string>
    <string name="button_crear_cuenta">CREAR CUENTA</string>
    <string name="edit_url">URL</string>
    <string name="edit_usuario">Nombre de usuario</string>
    <string name="edit_fecha_creacion">Fecha de creación</string>
    <string name="edit_fecha_expiracion">Fecha de expiración</string>
    <string name="button_edit_guardar">Guardar</string>
    <string name="menu_edit_product">Editar</string>
    <string name="menu_delete_product">Eliminar</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_ordenar">Ordenar</string>
    <string name="spinner_sin_categoria">(ninguna)</string>
    <string name="nombre_categoria">Nombre de la categoría</string>

    <string name="menu_principal">Todos los elementos</string>
    <string name="menu_categorias">Categorías</string>
    <string name="menu_generador">Generar contraseña</string>
    <string name="constraseña_actual">Constraseña actual</string>
    <string name="nueva_contraseña">Nueva contraseña</string>
    <string name="confirmar_nueva_contraseña">Confirmar nueva contraseña</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="configuracion">Configuración</string>
    <string name="contraseñas">Contraseñas</string>
    <string name="documentos">Documentos</string>
    <string name="imagenes">Imágenes</string>
    <string name="invalid_email">Introduzca un correo válido</string>
    <string name="invalid_password">Introduzca una contraseña de al menos 8 caracteres. Debe tener al menos una mayúscula, una minúscula, un dígito y un caracter especial</string>
    <string name="invalid_confirm_password">Las contraseñas no coinciden</string>
    <string name="A_Z">A-Z</string>
    <string name="a_z">a-z</string>
    <string name="_0_9">0-9</string>
    <string name="caracteres_especiales">!@#$%*</string>
    <string name="ordenar_por">Ordenar por</string>
    <string name="ordenar_de">Ordenar de</string>
    <string name="menor_a_mayor">Menor a mayor</string>
    <string name="mayor_a_menor">Mayor a menor</string>
    <string name="nombre">Nombre</string>
    <string name="invalid_name">Introduzca un nombre válido</string>
    <string name="invalid_url">Introduzca una URL válida</string>
    <string name="email_contacto">FreshTech@gmail.com</string>
    <string name="contacto">Contacto</string>
    <string name="categoria">Categoría</string>
    <string name="mensaje_verificacion">Introduzca el código de 6 dígitos que se ha enviado a su correo electrónico:</string>
    <string name="boton_validar">VALIDAR</string>
    <string name="boton_atras">ATRÁS</string>
    <string name="mensaje_reenviar">Reenviar código</string>
    <string name="titulo_caducados">Los siguientes elementos han caducado:</string>
    <string name="caducados">Caducados</string>
    <string name="descargar_imagen">Descargar imagen</string>
    <string name="descargar_documento">Descargar documento</string>
</resources>