<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202732"
    tools:context=".DocumentoEdit">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/huecoNombreDocumento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColorHint="@android:color/darker_gray" >
            <EditText
                android:id="@+id/nombreDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#008577"
                android:ems="10"
                android:hint="Nombre"
                android:textColor="#FFFFFF"
                android:textColorHint="@android:color/darker_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/huecoSpinner2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/ImagenId"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoNombreDocumento"
            app:placeholderText="Categoría"
            app:placeholderTextColor="@android:color/darker_gray">

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/style_spinner"
            android:ems="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClickAñadirCategoria"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/ImagenId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoNombreDocumento"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_nueva_categoria" />

        <ImageButton
            android:id="@+id/ImagenId"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClickSubirDocumento"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/huecoSpinner2"
            app:srcCompat="@drawable/ic_subir_documento" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/huecoFechaCreacionDocumento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImagenId"
            android:textColorHint="@android:color/darker_gray" >
            <EditText
                android:id="@+id/fechaCreacionDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#008577"
                android:ems="10"
                android:hint="@string/edit_fecha_creacion"
                android:inputType="none"
                android:enabled="false"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/huecoFechaExpiracionDocumento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoFechaCreacionDocumento"
            android:textColorHint="@android:color/darker_gray" >
            <EditText
                android:id="@+id/fechaExpiracionDocumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#008577"
                android:ems="10"
                android:hint="@string/edit_fecha_expiracion"
                android:inputType="date"
                android:textColor="#FFFFFF"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColorHint="@android:color/darker_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/botonDescargarDocumento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_rounded"
            android:onClick="onClickDescargarDocumento"
            android:text="@string/descargar_documento"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.173"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoFechaExpiracionDocumento" />

        <Button
            android:id="@+id/guardarDocumento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_rounded"
            android:onClick="onClickGuardar"
            android:text="@string/button_edit_guardar"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/botonDescargarDocumento" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>