<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202732"
    android:id="@+id/scrollview"
    tools:context=".ContraseñaEdit">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/huecoNombreContraseña"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >
            <EditText
                android:id="@+id/nombreContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#008577"
                android:ems="10"
                android:hint="Nombre"
                android:textColor="#FFFFFF"
                android:textColorHint="@android:color/darker_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/huecoSpinner2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/huecoUrlContraseña"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoNombreContraseña"
            app:placeholderText="Categoría"
            app:placeholderTextColor="@android:color/darker_gray">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/style_spinner"
                android:ems="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClickAñadirCategoria"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/huecoUrlContraseña"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoNombreContraseña"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_nueva_categoria" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="onClickGenerarContraseña"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/huecoFechaCreacionContraseña"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoUsuarioContraseña"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_icono_fragment_generador" />

        <ImageButton
            android:id="@+id/copiarURL"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            android:scaleType="fitCenter"
            android:onClick="onClickCopiarURL"
            app:layout_constraintBottom_toTopOf="@+id/huecoUsuarioContraseña"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoSpinner2"
            app:srcCompat="@drawable/ic_copy" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/huecoUrlContraseña"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/copiarURL"
            app:layout_constraintTop_toBottomOf="@+id/huecoSpinner2">

            <EditText
                android:id="@+id/urlContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#008577"
                android:ems="10"
                android:hint="@string/edit_url"
                android:inputType="textUri"
                android:textColor="#FFFFFF"
                android:textColorHint="@android:color/darker_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/copiarNombreUsuario"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            android:scaleType="fitCenter"
            android:onClick="onClickCopiarNombreUsuario"
            app:layout_constraintBottom_toTopOf="@+id/huecoContraseñaEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoUrlContraseña"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_copy" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/huecoUsuarioContraseña"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/copiarNombreUsuario"
            app:layout_constraintTop_toBottomOf="@+id/huecoUrlContraseña">

            <EditText
                android:id="@+id/usuarioContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#008577"
                android:ems="10"
                android:hint="@string/edit_usuario"
                android:textColor="#FFFFFF"
                android:textColorHint="@android:color/darker_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/copiarContraseña"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@color/colorPrimaryDark"
            android:scaleType="fitCenter"
            android:onClick="onClickCopiarContraseña"
            app:layout_constraintBottom_toTopOf="@+id/huecoFechaCreacionContraseña"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoUsuarioContraseña"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_copy" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/huecoContraseñaEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@+id/imageButton2"
            app:layout_constraintStart_toEndOf="@+id/copiarContraseña"
            app:layout_constraintTop_toBottomOf="@+id/huecoUsuarioContraseña"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <EditText
                android:id="@+id/contraseñaEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#008577"
                android:ems="10"
                android:hint="@string/login_contraseña"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="@android:color/darker_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBarContraseña"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="85dp"
            android:scaleY="2"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoContraseñaEdit" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/huecoFechaCreacionContraseña"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoContraseñaEdit"
            android:textColorHint="@android:color/darker_gray" >
            <EditText
                android:id="@+id/fechaCreacionContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#008577"
                android:ems="10"
                android:hint="@string/edit_fecha_creacion"
                android:inputType="none"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/huecoFechaExpiracionContraseña"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoFechaCreacionContraseña"
            android:textColorHint="@android:color/darker_gray" >
            <EditText
                android:id="@+id/fechaExpiracionContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#008577"
                android:ems="10"
                android:hint="@string/edit_fecha_expiracion"
                android:inputType="date"
                android:textColor="#FFFFFF"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColorHint="@android:color/darker_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_rounded"
            android:onClick="onClickGuardar"
            android:text="@string/button_edit_guardar"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.173"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/huecoFechaExpiracionContraseña" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>